--- a/templates/login.html
+++ b/templates/login.html
@@ -1,16 +1,32 @@
 {% extends 'baseHtml.html' %}
-{% block css %}
-    <link rel="stylesheet" href="/static/css/index.css">
-{% endblock %}
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <title>Login</title>
+    {% block css %}
+    <link rel="stylesheet" href="/static/css/login.css">
+    {% endblock %}
+</head>
 {% block content %}
-<section>
-    <div class="container">
-        <div class="mainText">
-            <h1>
-                Login
-            </h1>
-        </div>
+<body>
+    <header>
+        <h1>Title</h1>
+    </header>
+    <div class = "login-form-container">
+        <form action="" class="login-form">
+        <label for="username">Username</label>
+        <input type="text" name="username" id="">
+        <label for="password">Password</label>
+        <input type="password" name="password" id="">
+        <input type="submit" value="Login">
+        </form>
     </div>
-</section>
+    <canvas id="myCanvas" width="400" height="200"></canvas>
+  <script src="goose.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+</body>
 {% endblock %}
+</html>
