--- a/templates/login.html
+++ b/templates/login.html
@@ -16,7 +16,7 @@
         <h1>Title</h1>
     </header>
     <div class = "login-form-container">
-        <form action="" class="login-form">
+        <form action="" method="post" class="login-form">
         <label for="username">Username</label>
         <input type="text" name="username" id="">
         <label for="password">Password</label>
@@ -25,7 +25,7 @@
         </form>
     </div>
     <canvas id="myCanvas" width="400" height="200"></canvas>
-  <script src="goose.js"></script>
+  <script src="/static/js/goose.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 {% endblock %}
