--- a/templates/rooms.html
+++ b/templates/rooms.html
@@ -1,3 +1,4 @@
+{% extends 'baseHtml.html' %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,8 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Rooms</title>
-    <link rel="stylesheet" href="rooms.css">
+    {% block css %}
+    <link rel="stylesheet" href="/static/css/rooms.css">
+    {% endblock %}
 </head>
+{% block content %}
 <body>
     <div class="left-side">
         <div class="centered">
@@ -14,15 +18,22 @@
                 <h1>Create Room</h1>
             </div>
             <div class="create-button">
-                <input type="submit" value="Create">
+                <form action="" method="post">
+
+                    <input type="submit" value="Create">
+                </form>
+                
             </div>
         <div class="join-room">
             <div class="title">
                 <h1>Join Room</h1>
             </div>
             <div class="join-input">
-                <input maxlength="4" type="text" placeholder="Enter code">
+            <form action=""  method="post">
+                <input maxlength="4" type="text" name="roomCode"placeholder="Enter code">
                 <input type="submit" value="Join">    
+            </form>
+                
             </div>
         </div>
     </div>
@@ -33,4 +44,5 @@
         </div>
     </div>
 </body>
+{% endblock %}
 </html>
