--- a/templates/studyRoom.html
+++ b/templates/studyRoom.html
@@ -1,11 +1,15 @@
+{% extends 'baseHtml.html' %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Room</title>
-    <link rel="stylesheet" href="studyRoom.css">
+    {% block css %}
+    <link rel="stylesheet" href="/static/css/studyRoom.css">
+    {% endblock %}
 </head>
+{% block content %}
 <body>
     <header>
         <h1>
@@ -19,5 +23,10 @@
             <span id="secs">--</span>
         </h1>
     </div>
+    <div class="upload-container">
+        <label for="upload">Upload a .pdf or .docx file</label>
+        <input title="upload"type="file" id="image" name="upload"accept=".pdf .docx">
+    </div>
 </body>
+{% endblock %}
 </html>
