--- a/templates/joinRoom.html
+++ b/templates/joinRoom.html
@@ -8,7 +8,7 @@
     <div class="container">
         <div class="mainText">
             <h1>
-                joinRoom
+                {{var1}}
             </h1>
         </div>
     </div>
