--- a/templates/baseHtml.html
+++ b/templates/baseHtml.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Some Name</title>
+    <title>StudyRoom</title>
     <link rel="stylesheet" href="/static/css/baseCss.css">
     {% block css %}{% endblock %}
     <script src='/static/js/baseJs.js' defer></script>
