--- a/templates/studyRoom.html
+++ b/templates/studyRoom.html
@@ -26,6 +26,8 @@
     <div class="upload-container">
         <label for="upload">Upload a .pdf or .docx file</label>
         <input title="upload"type="file" id="image" name="upload"accept=".pdf .docx">
+        <label for="upload">Copy and paste notes here</label>
+        <textarea name="" id="" cols="30" rows="10"></textarea>
     </div>
 </body>
 {% endblock %}
