--- a/static/css/login.css
+++ b/static/css/login.css
@@ -69,13 +69,18 @@ header {
 input[type="text"],input[type="password"] {
     text-align: center;
   }
+
+input[type="submit"]{
+    width:6vw;
+    height:5vh;
+}
   
 .login-form>*{
     margin:5px;
     border-radius: 15px;
     font-size: larger;
 }
+
 .login-form>label{
     font-size:30px;
-
 }
