--- a/static/css/rooms.css
+++ b/static/css/rooms.css
@@ -29,6 +29,7 @@ body{
     font-family: "Gorditas";
 }
 
+
 .left-side{
     left:0;
     display: flex;
@@ -36,7 +37,6 @@ body{
     align-items: center;
     width:33vw;
     height:98vh;
-    border: solid black 1px;
 }
 
 .right-side{
@@ -61,7 +61,7 @@ body{
     border-radius: 15px;
 }
 
-.create-button>*{
+.create-button>input[type="submit"]{
     border-radius: 15px;
 }
 
