--- a/templates/rooms.html
+++ b/templates/rooms.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="/static/js/getRoomJSON.js" defer></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Rooms</title>
     {% block css %}
@@ -12,6 +13,9 @@
 </head>
 {% block content %}
 <body>
+    <div class="top">
+
+    </div>
     <div class="left-side">
         <div class="centered">
             <div class="create-room-title">
@@ -40,7 +44,7 @@
 
     <div class="right-side">
         <div class="list-rooms">
-
+            
         </div>
     </div>
 </body>
