--- a/static/css/rooms.css
+++ b/static/css/rooms.css
@@ -50,10 +50,11 @@ body{
     margin-top: 20px;
     position: relative;
     display:flex;
-    margin: 5px;
+    margin: 10px;
     font-size:20px;
-    justify-content: center;
 }
+
+.join-input>input[type=]
 
 .join-input>*{
     display: flex;
