--- a/templates/rooms.html
+++ b/templates/rooms.html
@@ -21,8 +21,8 @@
             <div class="create-room-title">
                 <h1>Create Room</h1>
             </div>
-            <div class="create-button">
-                <form action="" method="post">
+            <div>
+                <form class="create-button" action="" method="post">
 
                     <input type="submit" value="Create">
                 </form>
@@ -32,8 +32,8 @@
             <div class="title">
                 <h1>Join Room</h1>
             </div>
-            <div class="join-input">
-            <form action=""  method="post">
+            <div>
+            <form class="join-input" action=""  method="post">
                 <input maxlength="4" type="text" name="roomCode"placeholder="Enter code">
                 <input type="submit" value="Join">    
             </form>
