--- a/templates/home.html
+++ b/templates/home.html
@@ -1,8 +1,12 @@
 {% extends 'baseHtml.html' %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+
 {% block css %}
     <link rel="stylesheet" href="/static/css/index.css">
 {% endblock %}
-
+</head>
 {% block content %}
 <section>
     <div class="container">
@@ -14,3 +18,4 @@
     </div>
 </section>
 {% endblock %}
+</html>
