--- a/static/css/login.css
+++ b/static/css/login.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Gorditas:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap');
 
 :root{
     --softblue: #8FB5AA;
@@ -38,13 +39,17 @@ h1 {
     font-family: "Gorditas";
     font-weight: 700;
     font-style: normal;
+    padding-top: 10px;
+    font-size: 120px;
 }
 
 body{
     padding:0;
     margin:0;
     box-sizing:border-box;
-    font-family: "Gorditas";
+    font-family: "Berkshire Swash";
+    font-weight: 500;
+    font-style: normal;
 }
 
 header {
