--- a/templates/rooms.html
+++ b/templates/rooms.html
@@ -24,7 +24,8 @@
                     <h1>Create Room</h1>
                 </div>
                 <div class="create-room">
-                    <form class="create-button" action="" method="post">
+                    <form class="join-input" action="" method="post">
+                        <input maxlength="10" type="text" name="roomCode"placeholder="Room Name">
                         <input type="submit" value="Create">
                     </form>
                 </div>
