--- a/templates/rooms.html
+++ b/templates/rooms.html
@@ -24,8 +24,8 @@
                     <h1>Create Room</h1>
                 </div>
                 <div class="create-room">
-                    <form class="join-input" action="" method="post">
-                        <input maxlength="10" type="text" name="roomCode"placeholder="Room Name">
+                    <form class="join-input" action="/studyRoom" method="post">
+                        <input maxlength="10" type="text" name="roomName"placeholder="Room Name">
                         <input type="submit" value="Create">
                     </form>
                 </div>
@@ -35,7 +35,7 @@
                         <h1>Join Room</h1>
                     </div>
                     <div>
-                        <form class="join-input" action=""  method="post">
+                        <form class="join-input" action="/studyRoom"  method="post">
                             <input maxlength="4" type="text" name="roomCode"placeholder="Enter code">
                             <input type="submit" value="Join">
                         </form>
