--- a/templates/rooms.html
+++ b/templates/rooms.html
@@ -16,15 +16,20 @@
     <div class="top">
 
     </div>
+    
     <div class="wrapper">
         
         <div class="left-side">
+            
             <div class = "centered">
+                <div class="info">
+                    <h1>{{errorMessage}}</h1>
+                </div>
                 <div class="create-room-title">
                     <h1>Create Room</h1>
                 </div>
                 <div class="create-room">
-                    <form class="join-input" action="/studyRoom" method="post">
+                    <form class="join-input" action="/studyRoomCreate" method="post">
                         <input maxlength="10" type="text" name="roomName"placeholder="Room Name">
                         <input type="submit" value="Create">
                     </form>
@@ -35,7 +40,7 @@
                         <h1>Join Room</h1>
                     </div>
                     <div>
-                        <form class="join-input" action="/studyRoom"  method="post">
+                        <form class="join-input" action="/studyRoomJoin"  method="post">
                             <input maxlength="4" type="text" name="roomCode"placeholder="Enter code">
                             <input type="submit" value="Join">
                         </form>
