--- a/templates/index.html
+++ b/templates/index.html
@@ -11,13 +11,62 @@
 </head>
 {% block content %}
 <body>
-    <header>
-        <h1>Title</h1>
-    </header>
-    <div class="home">
-        <h1>What is the website about?</h1>
+
+
+    <!--<div class="home">-->
+  <!--      <h1>What is the website about?</h1>
         <p>Welcome to our educational platform designed to make studying fun and interactive! On our website, you can easily upload your study materials and kickstart your learning journey. Once you've uploaded your file, a timer starts to keep you focused and on track. When the timer ends, get ready to play our exciting Goose Game! We've partnered with OpenAI to bring you a unique experience where you'll answer questions provided by their API. Each question comes with four options, and when you choose the correct answer, your goose moves one step closer to victory! It's a race against time and your own knowledge, making learning a thrilling competition. Join us and turn your study sessions into exciting adventures!</p>
-    </div>  
+  -->
+        <section class="jumbotron text-left">
+            <div class="vstack">
+                <div class="container">
+                    <h2 class="text-center"> What is the website about? </h2>
+            
+                
+                    <div class="row">
+            
+                        <div class="col">
+                            <div class="card-group">
+                                <div class="card"> 
+                                    <h2 class="card-title card-header text-center">AI Generated Material</h2>
+                                    <div class="card-body">
+                                        <div class="card-text text-left">
+                                            Using an OpenAI LLM API, you're able to upload your revision material. 
+                                            <br></br>
+                    
+                                            This will generate multiple questions revolved around your revision material. 
+                                            <br></br>
+                    
+                                            This being said, this accumulates to enhance your study journey with our empowered active recall geese game! <br>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                
+                        <div class="col">
+                            <div class="card-group">
+                                <div class="card">
+                                    <h2 class="card-title card-header text-center">Active Recall Geese Game</h2>
+                                    <div class="card-body">
+                                        <div class="card-text text-left">
+                                            Kickstart your learning journey with by studying in an interactive and fun vibe!
+                                            <br></br>
+                                            Once you've uploaded your revision material, you'll be challenged by a series of questions. With each mark getting your goose closer to the finishing line!
+                                            <br></br>
+                                            Compete against your study buddies and become the best goose of the group!
+                                            
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    
+                </div>
+            </div>
+        </section>
+   <!-- </div>  -->
 </body>
 {% endblock %}
 </html>
