--- a/templates/baseHtml.html
+++ b/templates/baseHtml.html
@@ -20,7 +20,7 @@
 <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-primary" style="font-family:Gorditas;">
         <div class="container">
-            <h2 class="navbar-brand text-dark ">Website Name</h2>
+            <h2 class="navbar-brand text-dark ">QuizzyGoose</h2>
         
             <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#differentPages" aria-controls="differentPages" aria-label="Expand Navigation">
                 <div class="navbar-toggler-icon"></div>
