--- a/templates/register.html
+++ b/templates/register.html
@@ -10,13 +10,18 @@
     <link rel="stylesheet" href="/static/css/login.css">
     {% endblock %}
 </head>
+
+
 {% block content %}
 <body>
     <header>
         <h1>Title</h1>
     </header>
+    <div class="infoText">
+        <h1>{{errorMessage}}</h1>
+    </div>
     <div class = "login-form-container">
-        <form action="" method="post" class="login-form">
+        <form action="{{ url_for('routeManager.register') }}" method="post" class="login-form">
         <label for="username">Username</label>
         <input type="text" name="username" id="">
         <label for="password">Password</label>
