--- a/templates/login.html
+++ b/templates/login.html
@@ -12,6 +12,9 @@
 </head>
 {% block content %}
 <body>
+    <div class="infoText">
+        <h1>{{errorMessage}}</h1>
+    </div>
     <div class = "login-form-container">
         <form action="" method="post" class="login-form">
         <label for="username">Username</label>
