--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Gorditas:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Berkshire+Swash&family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
 .row{
   display:flex !important;
@@ -27,4 +30,23 @@
   justify-content: center;
   align-items: center;
   text-align: center;
+}
+
+#audioControls{
+  display:flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#playButton,#pauseButton{
+  border-radius:30px;
+  width: 10vw;
+  height: 10vh;
+  font-family: "Gorditas";
+  font-size:20px;
+  margin:10px;
+}
+
+#visualizer {
+  background-color:transparent;
 }
