--- a/templates/studySpaceTest.html
+++ b/templates/studySpaceTest.html
@@ -34,8 +34,10 @@
   <button id="playButton">Play</button>
   <button id="pauseButton">Pause</button>
 </div>
-<audio id="audioPlayer" controls>
-  <source src="{{ url_for('static', filename='music/lofiMusic.mp3') }}" type="audio/mpeg">
-</audio>
+<canvas id="visualizer" widht="800" height="300"></canvas>
+  <audio id="audioPlayer" controls>
+    <source src="{{ url_for('static', filename='music/lofiMusic.mp3') }}" type="audio/mpeg">
+  </audio>
+<script src="/static/js/audioVis.js"></script>
 {% endblock %}
 </html>
