--- a/templates/studySpaceTest.html
+++ b/templates/studySpaceTest.html
@@ -27,7 +27,9 @@
     <div id="a3-box" class="a-box"id="a3"><p id="a3-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, temporibus?</p></div>
     <div id="a4-box" class="a-box" id="a4"><p id="a4-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, harum.</p></div>
   </div>
+  <canvas id="myCanvas" width="400" height="200"></canvas>
   <script defer src="/static/js/script.js"></script>
+  <!-- <script src="/static/js/gooseRace.js"></script> -->
 </body>
 
 <div id="audioControls">
