--- a/templates/studyRoom.html
+++ b/templates/studyRoom.html
@@ -29,9 +29,11 @@
           <input type="submit" value="Upload">
         </form>
         
-    </div>
+   </div>
+   <canvas id="myCanvas" width="400" height="200"></canvas>
    <script src="/static/js/studyRoom.js"></script>
-    
+   
+      
 </body>
 {% endblock %}
 </html>
