--- a/templates/studyRoom.html
+++ b/templates/studyRoom.html
@@ -23,9 +23,9 @@
     <div id="timer"></div>
     <div class="upload-container">
         
-        <form action="" method="post" id="notes-form">
+        <form action="/promptAI" method="post" id="notes-form">
           <label for="notes">Copy and Paste notes here</label>
-          <textarea title="notes" id="" cols="30" rows="10"></textarea>
+          <textarea title="notes" name="prompt" id="" cols="30" rows="10"></textarea>
           <input type="submit" value="Upload">
         </form>
         
