--- a/templates/studySpaceTest.html
+++ b/templates/studySpaceTest.html
@@ -14,6 +14,9 @@
 </head>
 {% block content %}
 <body>
+  <script>
+    var output = JSON.parse('{{ output | safe }}');
+  </script>
   <section class="jumbotron text-left">
     <div class="container">
       <div class="card border-dark border-5 border rounded-bottom rounded-top">
