--- a/templates/studyRoom.html
+++ b/templates/studyRoom.html
@@ -46,7 +46,14 @@
             </div>
         </section>
     </header>
-
+    <div id="audioControls">
+        <button id="playButton" style="font-size:25px">Play Music</button>
+        <button id="pauseButton" style="font-size:25px">Pause Music</button>
+      </div>
+      <canvas id="visualizer" widht="800" height="300"></canvas>
+        <audio id="audioPlayer" controls>
+          <source src="{{ url_for('static', filename='music/lofiMusic.mp3') }}" type="audio/mpeg">
+        </audio>
     </div>
    <script src="/static/js/studyRoom.js"></script>
    
