changed small thing

--- a/templates/studyRoom.html
+++ b/templates/studyRoom.html
@@ -24,7 +24,7 @@
 
                                     <label for="durationInput">Set Duration (hh:mm:ss):</label>
                                     <input type="time" id="durationInput" step="1" value="00:10">
-                                    <button id="play-pause" class="btn btn-success">Play/Pause</button>
+                                    <button id="play-pause" class="btn btn-success">Start/Stop</button>
                                     <div id="timer"></div>
                                     <div class="upload-container">
 
