--- a/static/css/rooms.css
+++ b/static/css/rooms.css
@@ -115,3 +115,20 @@ input[type="text"]{
 .info{
     color:red;
 }
+@keyframes appearAndMove {
+    0% {
+        transform: translateY(15%);
+        opacity: 0;
+    }
+    50% {
+        transform: translateY(-15%);
+        opacity: 0.5;
+    }
+    100% {
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+.animated-element {
+    animation: appearAndMove 1.5s ease-in-out;
+}
