--- a/static/css/studyRoom.css
+++ b/static/css/studyRoom.css
@@ -22,3 +22,20 @@
   #visualizer {
     background-color:transparent;
   }
+  @keyframes appearAndMove {
+    0% {
+        transform: translateY(15%);
+        opacity: 0;
+    }
+    50% {
+        transform: translateY(-15%);
+        opacity: 0.5;
+    }
+    100% {
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+.animated-element {
+    animation: appearAndMove 1.5s ease-in-out;
+}
