--- a/templates/index.html
+++ b/templates/index.html
@@ -10,8 +10,8 @@
     {% endblock %}
 </head>
 {% block content %}
-<body>
-        <section class="jumbotron text-left">
+<body >
+        <section class="jumbotron text-left animated-element">
             <div class="vstack">
                 <div class="container">
                     <div class="row">
