--- a/templates/rooms.html
+++ b/templates/rooms.html
@@ -13,7 +13,7 @@
 </head>
 {% block content %}
 <body>
-    <section class="jumbotron text-left">
+    <section class="jumbotron text-left animated-element" >
         <div class="vstack">
             <div class="container">
                 <h1 class="text-center"> Rooms </h1>
