--- a/templates/studyRoom.html
+++ b/templates/studyRoom.html
@@ -12,7 +12,7 @@
 {% block content %}
 <body>
     <header>
-        <section class="jumbotron text-left">
+        <section class="jumbotron text-left animated-element">
             <div class="container">
                 <div class="card-group">
                     <div class="card">
