--- a/templates/baseHtml.html
+++ b/templates/baseHtml.html
@@ -39,6 +39,10 @@
                     <li class="nav-item">
                         <a class="nav-link text-dark" href="{{ url_for('routeManager.register') }}">Register</a>
                     </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" href="{{ url_for('routeManager.forum') }}">Forum</a>
+                    </li>
                 </ul>
             </div>
         </div>
