--- a/static/css/studyRoom.css
+++ b/static/css/studyRoom.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Gorditas:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap');
+
 #notes-form{
     display: flex;
     flex-direction: column;
@@ -38,4 +41,7 @@
 }
 .animated-element {
     animation: appearAndMove 1.5s ease-in-out;
+}
+.card>*{
+  font-family: "Gorditas";
 }
