--- a/templates/forum.html
+++ b/templates/forum.html
@@ -29,13 +29,16 @@
                             <h2 class="card-header text-center">Submit Your Anonymised Comment</h2>
                             <div class="card-body">
                                 <div class="card-text text-center">
-                                    <form action="" method="post" id="notes-form">
+                                    <form action="/addToForum" method="post" id="notes-form">
                                         <div class="form-group">
                                         <!--    <label for="notes">Submit study material</label> -->
                                             <br>
-                                            <textarea class="form-control" id="" rows="3"></textarea>
+                                           
+                                                <label for="comment"></label>
+                                            <textarea title="comment"class="form-control" name="comment" id="" rows="3"></textarea>
                                             <br>
                                             <input type="submit" value="Submit" class="btn btn-success">
+                                        
                                         </div>
                                     </form>
                                 </div>
@@ -49,7 +52,7 @@
                         <div class="card">
                             <h2 class="card-header text-center">Active Recall Geese Game Forum</h2>
                             <div class="card-body">
-                                <div class="card-text text-center">
+                                <div class="card-text text-center" id="comment-container">
                                     Really good platform to use :D
                                     <br></br>
                                     The mobile app is too good 
@@ -64,6 +67,8 @@
             </div>
             
         </div>
+        <p class="invisible" id="comments-tag">{{comments}}</p>
+        <script src="/static/js/forum.js"></script>
     </div>
 </section>
 {% endblock %}
