--- a/templates/forum.html
+++ b/templates/forum.html
@@ -12,11 +12,11 @@
     <div class="hstack">
         <div class="container">
             <div class="row">
-            <div class="col col-lg-10">
+            <div class="col col-lg-8">
                 <h1 class="text-center" style="font-size:70px"> Forum Chat </h1>
             </div>
-            <div class="col col-lg-2">
-                <canvas id="myCanvasA" width="100" height="100" style="padding-bottom: 10px;"></canvas>
+            <div class="col col-lg-4 " >
+                <canvas id="myCanvasA" width="100" height="100"></canvas>
                 <script src="/static/js/ducky.js"></script>
                 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
             </div>
@@ -49,14 +49,12 @@
                         <div class="card">
                             <h2 class="card-header text-center">Active Recall Geese Game Forum</h2>
                             <div class="card-body">
-                                <div class="card-text text-center">
-                                    Really good platform to use :D
-                                    <br></br>
-                                    The mobile app is too good 
-                                    <br></br>
-                                    Quizzy Goose more like Busy Goose
-                                    <br></br>
-                                </div>
+                                <ul class="list-group list-group-flush">
+                                    <li class="list-group-item" style="margin:10px">Really good platform to use :D</li>
+                                    <li class="list-group-item" style="margin:10px">The mobile app is too good</li>
+                                    <li class="list-group-item" style="margin:10px">Quizzy Goose more like Busy Goose</li>
+                                    <li class="list-group-item"></li>
+                                </ul>
                             </div>
                         </div>
                     </div>
