--- a/templates/studyRoom.html
+++ b/templates/studyRoom.html
@@ -50,7 +50,7 @@
         <button id="playButton" style="font-size:20px">Play Music</button>
         <button id="pauseButton" style="font-size:20px">Pause Music</button>
       </div>
-      <canvas id="visualizer" widht="800" height="300"></canvas>
+      <canvas id="visualizer" width="800" height="300"></canvas>
         <audio id="audioPlayer" controls>
           <source src="{{ url_for('static', filename='music/lofiMusic.mp3') }}" type="audio/mpeg">
         </audio>
